--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "knex": "^0.95.14",
     "pg": "^8.7.1"
   },
-  "devDependencies": {
+  /*"devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  }*/
 }
