Added dev dependancies

--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "knex": "^0.95.14",
     "pg": "^8.7.1"
   },
-  /*"devDependencies": {
+  "devDependencies": {
     "nodemon": "^2.0.15"
-  }*/
+  }
 }
 //
