--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "start:dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +19,7 @@
     "knex": "^0.95.14",
     "pg": "^8.7.1"
   },
-  "devDependencies": {
+  /*"devDependencies": {
     "nodemon": "^2.0.15"
-  }
+  }*/
 }
